multiple archive sites

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,10 @@
   "permissions": [
     "tabs"
   ],
+  "host_permissions": [
+    "https://archive.vn/*",
+    "https://archive.is/*"
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
